Add indent line support and fix some html highlights

--- a/github.yml
+++ b/github.yml
@@ -134,6 +134,7 @@ highlights:
   QuickFixLine: "- line_grey"
   Search: "- line_grey"
   SpecialKey: "indent_line"
+  IndentLine: "indent_line"
   SpellBad: "error_red - u"
   SpellCap: "dark_yellow"
   SpellLocal: "dark_yellow"
@@ -244,16 +245,16 @@ highlights:
   rustMacro: "macro"
 
   # HTML (keep consistent with Markdown, below)
-  htmlArg: "dark_yellow"
+  htmlArg: "text"
   htmlBold: "dark_yellow - b"
   htmlEndTag: "white"
-  htmlH1: "blue"
-  htmlH2: "blue"
-  htmlH3: "blue"
-  htmlH4: "blue"
-  htmlH5: "blue"
-  htmlH6: "blue"
-  htmlItalic: "purple - i"
+  htmlH1: "text"
+  htmlH2: "text"
+  htmlH3: "text"
+  htmlH4: "text"
+  htmlH5: "text"
+  htmlH6: "text"
+  htmlItalic: "text - i"
   htmlLink: "cyan - u"
   htmlSpecialChar: "dark_yellow"
   htmlSpecialTagName: "blue"
