Add support for git conflicts and nvim-cmp

--- a/github.yml
+++ b/github.yml
@@ -72,10 +72,26 @@ palette:
   scrollbar: "#262B30"
   html_tag: "#67F07B"
   special_text: "#A9BAD1"
+  current_diff_bg: "#23242E"
+  incoming_diff_bg: "#212A2E"
+  cmp_match: "#569CD6"
+  cmp_match_fuzzy: "#569CD6"
 
 highlights:
   Normal: "fg bg"
 
+  CmpItemAbbrMatch: "parameter -"
+  CmpItemAbbrMatchFuzzy: "parameter -"
+  CmpItemKindFunction: "function -"
+  CmpItemKindMethod: "function -"
+  CmpItemKindVariable: "identifier -"
+  CmpItemKindConstant: "parameter -"
+  CmpItemKindKeyword: "keyword -"
+  CmpItemKindClass: "html_tag -"
+  CmpItemKindModule: "html_tag -"
+  CmpItemKindProperty: "text -"
+  CmpItemKindText: "text -"
+  CmpItemKindSnippet: "text -"
   Comment: "comment - i"
   Constant: "constant"
   String: "string"
@@ -109,6 +125,8 @@ highlights:
   Underlined: "todo . u"
   Cursor: "cursor_fg cursor_bg"
 
+  GitConflictIncomingDiff: "fg incoming_diff_bg"
+  GitConflictCurrentDiff: "fg scrollbar"
   ColorColumn: "- color_column"
   CursorLineNr: "cursor_line_nr"
   SignColumn: "- sign_column"
