Add navic (code context) highlight groups

--- a/github.yml
+++ b/github.yml
@@ -27,6 +27,7 @@ palette:
   gutter_fg_grey: "#858585"
   cursor_grey: "#2C323C"
   visual_grey: "#3E4452"
+  separator_grey: "#707782"
   menu_grey: "#282C34"
   special_grey: "#3B4048"
   vertsplit: "#3E4452"
@@ -265,6 +266,36 @@ highlights:
   # Rust (work in progress)
   rustKeyword: "operator"
   rustMacro: "macro"
+
+  # Navic (code context plugin)
+  NavicIconsFile: "text cursor_grey"
+  NavicIconsModule: "bracket_yellow cursor_grey"
+  NavicIconsNamespace: "bracket_yellow cursor_grey"
+  NavicIconsPackage: "text cursor_grey"
+  NavicIconsClass: "class cursor_grey"
+  NavicIconsMethod: "function cursor_grey"
+  NavicIconsProperty: "text cursor_grey"
+  NavicIconsField: "text cursor_grey"
+  NavicIconsConstructor: "attribute cursor_grey"
+  NavicIconsEnum: "attribute cursor_grey"
+  NavicIconsInterface: "attribute cursor_grey"
+  NavicIconsFunction: "function cursor_grey"
+  NavicIconsVariable: "variable cursor_grey"
+  NavicIconsConstant: "constant cursor_grey"
+  NavicIconsString: "string cursor_grey"
+  NavicIconsNumber: "number cursor_grey"
+  NavicIconsBoolean: "boolean cursor_grey"
+  NavicIconsArray: "text cursor_grey"
+  NavicIconsObject: "text cursor_grey"
+  NavicIconsKey: "text cursor_grey"
+  NavicIconsNull: "text cursor_grey"
+  NavicIconsEnumMember: "text cursor_grey"
+  NavicIconsStruct: "attribute cursor_grey"
+  NavicIconsEvent: "bracket_yellow cursor_grey"
+  NavicIconsOperator: "operator cursor_grey"
+  NavicIconsTypeParameter: "class cursor_grey"
+  # NavicText: "text"
+  NavicSeparator: "separator_grey cursor_grey"
 
   # HTML (keep consistent with Markdown, below)
   htmlArg: "text"
